Make curve autosmooth work with touch drawing

Another case where the tool expects to receive a move event before a
press event to update its internal state.

BUG:510363